# cvlab-kit

./: .editorconfig  .env.example  .gitignore  404.html  README.md  app.py  main.py  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  start.sh
.github/workflows/: docs.yml
api/agent/: index.html
api/component/: index.html
api/core/: index.html
api/rest_api/: index.html
api/web_helper/: index.html
app/: api.py  crud.py  database.py  models.py  schemas.py  services.py
config/: example.yaml  generate_template.py  irg_sfda.yaml  mstar_baseline.yaml  mstar_correlation.yaml  mstar_correlation_v2.yaml  mstar_correlation_v3.yaml  mstar_curriculum_fisher.yaml  rectified_flow_example.yaml  voc.yaml
config/detection/: main.yaml  voc.yaml
config/flow/: augmentation_flow_adaptive.yaml  augmentation_flow_original.yaml  augmentation_flow_random.yaml  augmentation_flow_test.yaml  paper_figure_generation.yaml  pretrain_flow_generator.yaml
config/ssl/: adaptive_augmentation.yaml  cfg_augmentation_flow.yaml  cfg_augmentation_flow_conditional.yaml  cfg_augmentation_flow_original_to_weak.yaml  cfg_augmentation_flow_periodic_examples.yaml  cfg_augmentation_flow_simple.yaml  cfg_augmentation_flow_with_checkpoint.yaml  curriculum_adaptive_ssl.yaml  curriculum_adaptive_ssl_ablation.yaml  curriculum_gpucb_ssl.yaml  final_0_fixmatch.yaml  final_1_adaptive_aug.yaml  final_2_curriculum.yaml  final_3_dynamic_threshold.yaml  final_4_full_proposed.yaml  fixmatch.yaml  fixmatch_flow_randaugment.yaml  fixmatch_with_pretrained_flow.yaml  generative_augmentation.yaml  generative_augmentation_test.yaml  last_final_1_all.yaml  last_final_2_aug_sampling.yaml  last_final_3_aug_threshold.yaml  paper_fixmatch_pretrained_flow.yaml  supervised.yaml
config/templates/: generated_basic.yaml
cvlabkit/agent/: adaptive_augmentation_fixmatch.py  adaptive_augmentation_flow.py  adaptive_fixmatch.py  augmentation_flow.py  basic.py  classification.py  curriculum_adaptive_ssl.py  curriculum_gpucb_ssl.py  curriculum_mstar.py  fixmatch.py  flow_augmentation_fixmatch.py  generative_augmentation_fixmatch.py  irg_sfda.py  main.py  mstar_correlation.py  paper_fixmatch_flow_randaugment.py  paper_fixmatch_pretrained_flow.py  pretrain_flow_generator.py  rectified_flow_trainer.py  supervised.py
cvlabkit/core/: agent.py  config.py  config_proxy.py  creator.py  interface_meta.py
deployment/deployment-guide/: index.html
docker/: .dockerignore  Dockerfile  compose.yml  docker-compose.synology.yml  docker-compose.yml  entrypoint.sh
docs/: README.md  additional_libraries.md  architecture.md  build_concept_explained.md  component-sync.md  config_examples.md  config_guide.md  creator_workflow.md  deployment_docker.md  deployment_guide.md  deployment_synology.md  development_philosophy.md  distributed_execution_guide.md  distributed_execution_quickstart.md  documentation_guide.md  extending_components.md  faq.md  getting_started.md  github_guide.md  performance_tuning.md  user_guide_developer.md  user_guide_experimenter.md  web_helper_guide.md
docs/api/: agent.md  component.md  core.md  rest_api.md  web_helper.md
docs/architecture/: sync-system.md
docs/deployment/: deployment-guide.md
docs/getting-started/: distributed-execution.md  first-experiment.md  installation.md
docs/guides/: config-syntax.md  web-ui.md
docs/reference/: FAQ.md
docs/troubleshooting/: troubleshooting.md
search/: search_index.json
wandb/: latest-run
web_helper/: __init__.py  pytest.ini  run_tests.py
web_helper_guide/: index.html
(+712 files in other folders)
