[project]
name = "cvlab-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.43",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
