[project]
name = "cvlab-kit"
version = "0.1.0"
description = "PyTorch-based modular ML experimentation framework with web-based research management platform"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pytorch", "machine-learning", "experimentation", "research", "semi-supervised", "computer-vision"]
authors = [
    {name = "CVLab-Kit Team"}
]
dependencies = [
    "accelerate>=1.2.1",
    "aiofiles>=25.1.0",
    "black>=24.0.0",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "ema-pytorch>=0.7.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "hyper-connections>=0.2.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "ruff>=0.8.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.0",
    "sqlalchemy>=2.0.43",
    "torch>=2.7.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]

[project.urls]
Homepage = "https://github.com/deveronica/cvlab-kit"
Documentation = "https://deveronica.github.io/cvlab-kit"
Repository = "https://github.com/deveronica/cvlab-kit"
Issues = "https://github.com/deveronica/cvlab-kit/issues"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.ruff]
# Same as Black.
line-length = 88

# Assume Python 3.9+.
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "D",   # pydocstyle (Google style)
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["cvlabkit", "web_helper"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests", "web_helper/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mkdocs-swagger-ui-tag>=0.7.2",
    "ruff>=0.13.1",
]
